data/derived/comb/progs/unify/prog8650.ml.out
Characters 1-10:
   [9;9;9;9] [9;9;9];;
   ^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
